# rukata

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml
crates/rukata/: Cargo.toml  README.md
crates/rukata-companion/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
crates/rukata-companion/companion/: .gitignore  book.toml
crates/rukata-companion/companion/src/: SUMMARY_template.md  difficulty.md
crates/rukata-companion/companion/templates/: SUMMARY_template.md  advanced_template.md  basic_template.md  categories_template.md  intermediate_template.md  libraries_template.md
crates/rukata-companion/src/pages/: index.astro
crates/rukata-puzzle-config/: Cargo.toml
crates/rukata-puzzle-data/: Cargo.toml  README.md  build.rs
crates/rukata-puzzle-data/puzzles/p00000-basic-addition/: README.md  puzzle-config.json
crates/rukata-puzzle-data/puzzles/p00000-basic-addition/starter/: Cargo.toml
crates/rukata-puzzle-data/puzzles/p00000-basic-addition/starter/src/: lib.rs
crates/rukata-puzzle-data/puzzles/p00000-basic-addition/starter/tests/: test.rs
crates/rukata-puzzle-data/src/: lib.rs
crates/rukata-puzzles/: Cargo.toml
crates/rukata-settings/: Cargo.toml  README.md
crates/rukata-settings/src/: lib.rs  versioned_settings.rs
crates/rukata-settings/src/versions/: v1.rs
crates/rukata-settings/tests/: settings_tests.rs
crates/rukata-settings/tests/files/: missing_directory.json  valid_basic.json
crates/rukata/src/: argument_builder.rs  command.rs  common.rs  lib.rs  main.rs  validation.rs
crates/rukata/src/commands/: check.rs  generate.rs  mod.rs  settings.rs  solution.rs
