[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"

[workspace.dependencies]
rukata-puzzle-data = { path="crates/rukata-puzzle-data" }
rukata-puzzles = { path="crates/rukata-puzzles" }
rukata-settings = { path="crates/rukata-settings" }

camino = "1.1"
glob = "0.3.1"
itertools = "0.12"
phf = { version = "0.11", features = ["macros"] }
phf_codegen = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
