[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"

[workspace.dependencies]
rukata-puzzle-data = { path = "crates/rukata-puzzle-data" }
rukata-settings = { path = "crates/rukata-settings" }

camino = "1.1.6"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
dirs = "5.0.1"
glob = "0.3.1"
itertools = "0.12.1"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
phf_codegen = "0.11.2"
pretty_assertions = "1.4.0"
scopeguard = "1.2.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
