[package]
name = "rukata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rukata-puzzle-data.workspace = true
rukata-settings.workspace = true

camino.workspace = true
clap.workspace = true
console.workspace = true
dirs.workspace = true
lazy_static.workspace = true
